frontend/test/should_pass/external_001.grg
using external_model_001;

rule extTest
{
    pattern {
        a:A --> b:B;
    }
    replace {
        c:B --> a --> b --> d:A;
    }
}
