frontend/test/should_fail/inh_010.grg
using inh_model_010;

rule bla { pattern{} replace{} }
